welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:7: error: '<-' expected but '{' found.
		{
                ^MethodsDogHouse:12: error: illegal start of simple expression
	}
        ^